better layout for python output packaging that includes python

--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "build": {
+    "extraFiles": [
+      "python"
+    ]
+  },
   "devDependencies": {
     "electron": "^4.0.5"
   },
