don't use Python env, use an entire Python interpreter to be portable better format in stdout

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "${workspaceFolder}\\python\\venv\\Scripts\\python.exe",
+    "python.pythonPath": "${workspaceFolder}\\Python3\\python.exe",
     "python.linting.pylintEnabled": true
 }
