--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "macro-pivot",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "build/main.js",
   "scripts": {
-    "start": "electron .",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "electron-webpack dev",
+    "compile": "electron-webpack",
+    "dist": "yarn compile && electron-builder",
+    "dist:dir": "yarn dist -- --dir -c.compression=store -c.mac.identity=null"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +18,47 @@
       "workspace"
     ]
   },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
+  "electronWebpack": {
+    "renderer": {
+      "webpackConfig": "webpack.renderer.additions.js"
+    }
+  },
   "devDependencies": {
-    "electron": "^4.0.5"
+    "@babel/core": "^7.3.3",
+    "@babel/preset-react": "^7.0.0",
+    "electron": "^4.0.5",
+    "electron-builder": "^20.38.5",
+    "electron-packager": "^13.1.0",
+    "electron-webpack": "^2.6.2",
+    "electron-webpack-ts": "^3.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
+    "monaco-editor-webpack-plugin": "^1.7.0",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^5.3.3",
+    "tslint": "^5.12.1",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
-    "htmlspecialchars": "^1.0.5"
+    "@types/he": "^1.1.0",
+    "@types/react-dom": "^16.8.2",
+    "@types/split.js": "^1.3.2",
+    "he": "^1.2.0",
+    "monaco-editor": "^0.15.6",
+    "muicss": "^0.9.41",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-monaco-editor": "^0.24.0",
+    "resize-observer": "^1.0.0",
+    "source-map-support": "^0.5.10",
+    "split-grid": "^1.0.9",
+    "split.js": "^1.5.10"
   }
 }
