--- a/package.json
+++ b/package.json
@@ -50,15 +50,17 @@
     "@types/he": "^1.1.0",
     "@types/react-dom": "^16.8.2",
     "@types/split.js": "^1.3.2",
+    "@types/text-encoding": "^0.0.35",
     "he": "^1.2.0",
     "monaco-editor": "^0.15.6",
     "muicss": "^0.9.41",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-monaco-editor": "^0.24.0",
+    "react-split-pane": "^0.1.85",
     "resize-observer": "^1.0.0",
     "source-map-support": "^0.5.10",
     "split-grid": "^1.0.9",
-    "split.js": "^1.5.10"
+    "text-encoding": "^0.7.0"
   }
 }
