--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "electron": "^4.0.5",
     "electron-builder": "^20.38.5",
     "electron-packager": "^13.1.0",
+    "electron-react-devtools": "^0.5.3",
     "electron-webpack": "^2.6.2",
     "electron-webpack-ts": "^3.1.1",
     "html-webpack-plugin": "^3.2.0",
@@ -47,11 +48,13 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "@types/he": "^1.1.0",
     "@types/react-dom": "^16.8.2",
     "@types/split.js": "^1.3.2",
     "@types/text-encoding": "^0.0.35",
     "he": "^1.2.0",
+    "material-ui-treeview": "^3.2.0",
     "monaco-editor": "^0.15.6",
     "muicss": "^0.9.41",
     "react": "^16.8.3",
