--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "@types/he": "^1.1.0",
     "@types/react-dom": "^16.8.2",
     "@types/split.js": "^1.3.2",
     "@types/text-encoding": "^0.0.35",
     "he": "^1.2.0",
-    "material-ui-treeview": "^3.2.0",
     "monaco-editor": "^0.15.6",
     "muicss": "^0.9.41",
     "react": "^16.8.3",
