--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@mdi/js": "^3.4.93",
+    "@mdi/react": "^1.1.0",
     "@types/he": "^1.1.0",
     "@types/react-dom": "^16.8.2",
     "@types/split.js": "^1.3.2",
