--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "@mdi/js": "^3.4.93",
     "@mdi/react": "^1.1.0",
     "@types/he": "^1.1.0",
