--- a/package.json
+++ b/package.json
@@ -54,12 +54,15 @@
     "@mdi/js": "^3.4.93",
     "@mdi/react": "^1.1.0",
     "@types/he": "^1.1.0",
+    "@types/pubsub-js": "^1.5.18",
     "@types/react-dom": "^16.8.2",
     "@types/split.js": "^1.3.2",
     "@types/text-encoding": "^0.0.35",
     "he": "^1.2.0",
+    "hidefile": "^2.0.0",
     "monaco-editor": "^0.15.6",
     "muicss": "^0.9.41",
+    "pubsub-js": "^1.7.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-monaco-editor": "^0.24.0",
@@ -67,6 +70,7 @@
     "resize-observer": "^1.0.0",
     "source-map-support": "^0.5.10",
     "split-grid": "^1.0.9",
-    "text-encoding": "^0.7.0"
+    "text-encoding": "^0.7.0",
+    "winattr": "^2.0.0"
   }
 }
