--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "jsx": "react",
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*"],
+      "*": ["node_modules/*", "custom_types/*", ],
       "common": ["src/common/*"]
     }
   },
